@@ -26,6 +26,7 @@ CAY-2838 Vertical Inheritance: Problem setting db attribute to null via flattene
 CAY-2840 Vertical Inheritance: Missing subclass attributes with joint prefetch
 CAY-2841 Multi column ColumnSelect with SHARED_CACHE fails after 1st select
 CAY-2844 Joint prefetch doesn't use ObjEntity qualifier
+CAY-2851 Replace Existing OneToOne From New Object
 
 ----------------------------------
 Release: 4.2
